<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametresTemperatureControlleur"
    android:background="@color/fond">

    <!-- <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/orange"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <FrameLayout
            android:id="@+id/menu_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout> -->

    <RelativeLayout
        android:layout_width="153dp"
        android:layout_height="70dp"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginBottom="448dp"
        android:layout_weight=".28"
        android:background="@drawable/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/minTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="176dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="153dp"
        android:layout_height="70dp"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginBottom="364dp"
        android:layout_weight=".28"
        android:background="@drawable/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/maxTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginBottom="284dp"
        android:layout_weight=".28"
        android:background="@drawable/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/delaiRecup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/neunoeil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/neunoeil" />

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="295dp"
        android:layout_height="78dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/verdana"
        android:text="@string/parametres_temperature_titre"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnValiderTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/arrondir"
        android:fontFamily="@font/verdana"
        android:text="@string/valider"
        android:textColor="@color/black"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errParamTemp"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btnRetourTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/arrondir"
        android:fontFamily="@font/verdana"
        android:text="@string/retour"
        android:textColor="@color/black"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnValiderTemp"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errParamTemp"
        app:layout_constraintVertical_bias="0.512" />



    <TextView
        android:id="@+id/errParamTemp"
        android:layout_width="406dp"
        android:layout_height="136dp"
        android:fontFamily="@font/nunito"
        android:text="@string/erreur"
        android:textColor="@color/rose_pastel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delaiRecup"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="55dp"
        android:layout_height="37dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/verdana"
        android:text="@string/minTemp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/verdana"
        android:text="@string/maxTemp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:fontFamily="@font/verdana"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="52dp"
        android:text="@string/delaiRecup"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>